<resources>
    <!-- App -->
    <string name="app_name">WordDropper</string>
    <string name="app_sharedPreferencesFileName">worddropper-shared-preferences</string>
    <string name="app_gameNotFoundError">The requested game couldn\'t be found.</string>

    <string name="integer">%d</string>
    <string name="bytes">%.2fB</string>
    <string name="kilobytes">%.2fKB</string>
    <string name="megabytes">%.2fMB</string>
    <string name="gigabytes">%.2fGB</string>

    <!-- GameStats -->
    <string name="endGameScreen_title">WordDropper</string>
    <string name="endGameScreen_subtitle">Game Overview</string>

    <string name="endGameScreen_wordsCreatedTitle">Words Created</string>
    <string name="endGameScreen_scramblesUsedTitle">Scrambles Used</string>
    <string name="endGameScreen_scramblesEarnedTitle">Scrambles Earned</string>
    <string name="endGameScreen_scoreTitle">Score</string>
    <string name="endGameScreen_levelTitle">Level</string>

    <string name="endGameScreen_graphPointDistribution">Point Distribution</string>
    <string name="endGameScreen_graphWordLengths">Word Length</string>

    <string name="endGameScreen_graphNoData">No Data :(</string>
    <string name="endGameScreen_graphWordLengthsLabel">%d letters</string>

    <string name="endGameScreen_actionPlayAgain">Play Again</string>
    <string name="endGameScreen_actionMainMenu">Main Menu</string>

    <string name="gameStats_stat_avgWordLength">Avg. Word Length</string>
    <string name="gameStats_stat_avgWordPoints">Avg. Word Points</string>
    <string name="gameStats_stat_totalLettersUsed">Total Letters Used</string>

    <!-- Game -->
    <string name="gameScreen_pauseMenuSaveAndQuit">Save and Quit</string>
    <string name="gameScreen_pauseMenuSettings">Settings</string>
    <string name="gameScreen_pauseMenuRestartOption">Restart Game</string>
    <string name="gameScreen_pauseMenuEndGameOption">End Game</string>
    <string name="gameScreen_pauseMenuDebugSubmitWords">Submit Words</string>

    <string name="gameScreen_hudStatMovesLeft">Moves Left</string>
    <string name="gameScreen_hudStatScrambles">Scrambles</string>
    <string name="gameScreen_hudStatLevel">Level</string>
    <string name="gameScreen_infiniteValue">∞</string>

    <string name="gameScreen_wordHistoryChartDescription">Previous word points</string>

    <!-- MainMenu -->
    <string name="mainMenuScreen_titleWord">Word</string>
    <string name="mainMenuScreen_titleDropper">Dropper</string>

    <string name="mainMenuScreen_optionResume">Resume</string>
    <string name="mainMenuScreen_optionPlay">Play</string>
    <string name="mainMenuScreen_optionStats">Stats</string>
    <string name="mainMenuScreen_optionSettings">Settings</string>

    <string name="mainMenuScreen_optionPlayZen">Zen</string>
    <string name="mainMenuScreen_optionPlayEasy">Easy</string>
    <string name="mainMenuScreen_optionPlayMedium">Medium</string>
    <string name="mainMenuScreen_optionPlayHard">Hard</string>
    <string name="mainMenuScreen_optionPlayExpert">Expert</string>

    <string name="mainMenuScreen_optionStatsProfile">Global Profile</string>
    <string name="mainMenuScreen_optionStatsSpecial">Special</string>
    <string name="mainMenuScreen_optionStatsGames">Games</string>

    <string name="mainMenuScreen_optionsGoBackToMainMenu">Back to Main Menu</string>

    <!-- StatsGameSelect -->
    <string name="statsGameSelectScreen_title">Game Select</string>
    <string name="statsGameSelectScreen_noGames">No games have been played :(</string>

    <!-- Settings -->
    <string name="settings_title">WordDropper Settings</string>

    <string name="settings_sectionColorTheme">Color Theme</string>
    <string name="settings_sectionApplication">Application</string>

    <string name="settings_deleteDataOptionTitle">Delete all data</string>
    <string name="settings_deleteDataOptionDescription">WordDropper is using %s of storage.</string>
    <string name="settings_deleteDataDialogMessage">Are you sure you want to erase all your
        WordDropper data? This will remove all high scores, word history, and active/past games.
        Deleting is permanent and cannot be undone.</string>
    <string name="settings_deleteDataDialogTitle">Delete All Data?</string>
    <string name="settings_deleteDataDialogButtonDelete">Delete</string>
    <string name="settings_deleteDataDialogButtonCancel">Cancel</string>
    <string name="settings_deleteDataCompleteToastMessage">Data deleted!</string>
</resources>
