<me.fru1t.worddropper.ui.widget.ColoredFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="me.fru1t.worddropper.ui.mainmenu.MainMenuActivity"
        android:id="@+id/mainMenuScreenRoot"
        android:keepScreenOn="true">

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainMenuScreenBackgroundView" />

    <!-- Logo -->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp">
            <me.fru1t.worddropper.ui.widget.ColoredTextView
                    android:text="@string/mainMenuScreen_titleWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainMenuScreenTitleWord"
                    android:layout_marginTop="0dp"
                    android:textSize="@dimen/mainMenuScreen_titleTextSize"
                    app:textColorTheme="primary" />
            <me.fru1t.worddropper.ui.widget.ColoredTextView
                    android:text="@string/mainMenuScreen_titleDropper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/mainMenuScreenTitleWord"
                    app:layout_constraintTop_toBottomOf="@+id/mainMenuScreenTitleWord"
                    android:id="@+id/mainMenuScreenTitleDropper"
                    android:textSize="@dimen/mainMenuScreen_titleTextSize"
                    app:textColorTheme="primary" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout> <!-- Logo -->

    <!-- Menu Options -->
    <!--    Root Menu -->
    <LinearLayout
            style="@style/MainMenuScreen_MenuWrapper"
            android:id="@+id/mainMenuScreenRootMenu">
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionResume"
                android:onClick="onResumeClick"
                android:visibility="gone"
                android:id="@+id/mainMenuScreenResumeButton" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionPlay"
                android:onClick="onPlayClick" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionStats"
                android:onClick="onStatsClick" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionSettings"
                android:onClick="onSettingsClick" />
    </LinearLayout> <!--    Root Menu -->

    <!--    Resume Menu -->
    <LinearLayout
            style="@style/MainMenuScreen_MenuWrapper"
            android:id="@+id/mainMenuScreenResumeMenu">
        <me.fru1t.worddropper.ui.widget.GameListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mainMenuScreenResumeGameList"
                app:backgroundColorTheme="transparent" />
    </LinearLayout> <!--    Resume Menu -->

    <!--    Play Menu -->
    <LinearLayout
            style="@style/MainMenuScreen_MenuWrapper"
            android:id="@+id/mainMenuScreenPlayMenu">
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionPlayZen"
                android:onClick="onPlayZenClick" />

        <me.fru1t.worddropper.ui.widget.Divider style="@style/MainMenuScreen_MenuOptionDivider"/>
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionPlayEasy"
                android:onClick="onPlayEasyClick" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionPlayMedium"
                android:onClick="onPlayMediumClick" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionPlayHard"
                android:onClick="onPlayHardClick" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionPlayExpert"
                android:onClick="onPlayExpertClick" />
    </LinearLayout> <!--    Play Menu -->

    <!--    Stats Menu -->
    <LinearLayout
            style="@style/MainMenuScreen_MenuWrapper"
            android:id="@+id/mainMenuScreenStatsMenu">
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionStatsProfile"
                android:onClick="onStatsProfileClick" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionStatsSpecial"
                android:onClick="onStatsSpecialClick" />
        <me.fru1t.worddropper.ui.widget.ColoredTextView
                style="@style/MainMenuScreen_MenuOption"
                android:text="@string/mainMenuScreen_optionStatsGames"
                android:onClick="onStatsGamesClick" />
    </LinearLayout> <!--    Stats Menu -->
    <!-- /Menu Options -->

</me.fru1t.worddropper.ui.widget.ColoredFrameLayout>
