<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="me.fru1t.worddropper.activities.MainMenuScreen"
        android:id="@+id/mainMenuScreenRoot">

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainMenuScreenBackgroundView" />

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainMenuScreenTitleWrapper">

        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp">

            <TextView
                    android:text="@string/mainMenuScreen_titleWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainMenuScreenTitleWord"
                    android:layout_marginTop="0dp"
                    android:textSize="@dimen/mainMenuScreen_titleTextSize" />

            <TextView
                    android:text="@string/mainMenuScreen_titleDropper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/mainMenuScreenTitleWord"
                    app:layout_constraintTop_toBottomOf="@+id/mainMenuScreenTitleWord"
                    android:id="@+id/mainMenuScreenTitleDropper"
                    android:textSize="@dimen/mainMenuScreen_titleTextSize" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/mainMenuScreenOptionsWrapper">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/mainMenuScreen_optionHeight"
                android:gravity="center_vertical"
                android:text="@string/mainMenuScreen_optionPlay"
                android:textSize="@dimen/mainMenuScreen_optionFontSize"
                android:clickable="true"
                android:onClick="onOptionPlayClick"
                android:id="@+id/mainMenuScreenOptionPlay"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/mainMenuScreen_optionHeight"
                android:gravity="center_vertical"
                android:text="@string/mainMenuScreen_optionStats"
                android:textSize="@dimen/mainMenuScreen_optionFontSize"
                android:clickable="true"
                android:onClick="onOptionStatsClick"
                android:id="@+id/mainMenuScreenOptionStats"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/mainMenuScreen_optionHeight"
                android:gravity="center_vertical"
                android:text="@string/mainMenuScreen_optionSettings"
                android:textSize="@dimen/mainMenuScreen_optionFontSize"
                android:clickable="true"
                android:onClick="onOptionSettingsClick"
                android:id="@+id/mainMenuScreenOptionSettings"/>

    </LinearLayout>

</FrameLayout>
