<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="me.fru1t.worddropper.activities.EndGameScreen"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:id="@+id/endGameScreenRoot">

    <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="WordDropper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:id="@+id/endGameScreenGlobalTitle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        <TextView
                android:text="Game Overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/endGameScreenGlobalTitle"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/endGameScreenGlobalSubtitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

            <TextView
                    android:id="@+id/endGameScreenLevelTitle"
                    android:text="@string/endGameScreen_levelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" />

            <TextView
                    android:id="@+id/endGameScreenLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/endGameScreenLevelTitle" />
        </android.support.constraint.ConstraintLayout>

        <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#ff9800" />

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

            <TextView
                    android:id="@+id/endGameScreenScoreTitle"
                    android:text="@string/endGameScreen_scoreTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" />

            <TextView
                    android:id="@+id/endGameScreenScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/endGameScreenScoreTitle" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.333">

            <TextView
                    android:id="@+id/endGameScreenScramblesEarnedTitle"
                    android:text="@string/endGameScreen_scramblesEarnedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="12sp" />

            <TextView
                    android:id="@+id/endGameScreenScramblesEarned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/endGameScreenScramblesEarnedTitle" />
        </android.support.constraint.ConstraintLayout>

        <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#ff9800" />

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.333">

            <TextView
                    android:id="@+id/endGameScreenScramblesUsedTitle"
                    android:text="@string/endGameScreen_scramblesUsedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="12sp" />

            <TextView
                    android:id="@+id/endGameScreenScramblesUsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/endGameScreenScramblesUsedTitle"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>

        <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#ff9800" />

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.333">

            <TextView
                    android:id="@+id/endGameScreenWordsTitle"
                    android:text="@string/endGameScreen_wordsCreatedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="12sp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:id="@+id/endGameScreenWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/endGameScreenWordsTitle"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</LinearLayout>
