<me.fru1t.worddropper.ui.widget.ColoredFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:clipChildren="false"
        tools:context="me.fru1t.worddropper.ui.game.GameActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!-- Hud -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/gameScreen_hudHeight"
                android:orientation="vertical">

            <!-- Stats -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/gameScreen_hudStatsPaddingTop"
                    android:paddingBottom="@dimen/gameScreen_hudStatsPaddingBottom"
                    android:orientation="horizontal">

                <!-- Level -->
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="onLevelClick">
                    <me.fru1t.worddropper.ui.widget.ColoredTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gameScreen_hudStatLevel"
                            android:textSize="@dimen/gameScreen_hudStatsTitleTextSize"
                            app:textColorTheme="text_blend" />
                    <me.fru1t.worddropper.ui.widget.ColoredTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/gameLevel"
                            android:textSize="@dimen/gameScreen_hudStatsValueTextSize"
                            app:textColorTheme="text_blend"/>
                </LinearLayout>

                <!-- Scrambles -->
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="onScramblesClick">
                    <me.fru1t.worddropper.ui.widget.ColoredTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gameScreen_hudStatScrambles"
                            android:textSize="@dimen/gameScreen_hudStatsTitleTextSize"
                            app:textColorTheme="text_blend" />
                    <me.fru1t.worddropper.ui.widget.ColoredTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/gameScrambles"
                            android:textSize="@dimen/gameScreen_hudStatsValueTextSize"
                            app:textColorTheme="text_blend"/>
                </LinearLayout>

                <!-- Moves Left -->
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onMovesLeftClick">
                    <me.fru1t.worddropper.ui.widget.ColoredTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gameScreen_hudStatMovesLeft"
                            android:textSize="@dimen/gameScreen_hudStatsTitleTextSize"
                            app:textColorTheme="text_blend" />
                    <me.fru1t.worddropper.ui.widget.ColoredTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/gameMovesLeft"
                            android:textSize="@dimen/gameScreen_hudStatsValueTextSize"
                            app:textColorTheme="text_blend"/>
                </LinearLayout>
            </LinearLayout> <!-- Stats -->

            <!-- Current word and graph -->
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onGraphicClick">
                <com.github.mikephil.charting.charts.BarChart
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/gameChart" />
                <me.fru1t.worddropper.ui.widget.ColoredTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/gameScreen_hudCurrentWordVerticalPadding"
                        android:paddingBottom="@dimen/gameScreen_hudCurrentWordVerticalPadding"
                        android:textSize="@dimen/gameScreen_hudCurrentWordTextSize"
                        android:id="@+id/gameActiveWord"
                        app:backgroundColorTheme="background" />
            </FrameLayout> <!-- Current word and graph -->
        </LinearLayout> <!-- hud -->

        <me.fru1t.worddropper.ui.game.TileBoard
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/gameTileBoard"/>
        <me.fru1t.worddropper.ui.game.WrappingProgressBar
                android:layout_width="match_parent"
                android:layout_height="@dimen/gameScreen_progressHeight"
                android:id="@+id/gameProgress"/>
    </LinearLayout>

    <me.fru1t.worddropper.ui.widget.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gamePauseMenu"
            android:visibility="gone"
            android:background="@color/menu_wrapperBackground" />
</me.fru1t.worddropper.ui.widget.ColoredFrameLayout>
